Add reset password functionality

--- a/backend/Templates/expired.html
+++ b/backend/Templates/expired.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}{{title}}{% endblock %}
+{% block title %}Expired{% endblock %}
 
 {% block content %}
     <h1>This link has expired!</h1>
