--- a/backend/Templates/reset_confirm.html
+++ b/backend/Templates/reset_confirm.html
@@ -2,6 +2,6 @@
 {% block title %}Confirmed{% endblock %}
 
 {% block content %}
-    <h1>Thank you for confirming your email address!</h1>
+    <h1>Password has been reset!</h1>
     <p>Please close this window</p>
 {% endblock %}
