--- a/frontend/src/containers/styles/AboutStyles.css
+++ b/frontend/src/containers/styles/AboutStyles.css
@@ -1,9 +1,25 @@
 .balloon {
-    width: 98vw;
-    opacity: 0.4;
+    width: 100vw;
+    opacity: 0.9;
 }
 
 .about-headers {
     position: absolute;
     top: 20%;
+}
+
+.about-headers {
+    color: white;
+    position: absolute;
+    top: 35%;
+    left: 5%;
+}
+
+.about-title {
+    font-size: 60px;
+}
+
+.about-subheading {
+    font-size: 20px;
+    width: 400px;
 }
