--- a/frontend/src/containers/styles/LandingStyle.css
+++ b/frontend/src/containers/styles/LandingStyle.css
@@ -26,3 +26,39 @@
     padding: 10px 35px;
     border-radius: 15px;
 }
+
+.banner-btn:hover {
+    color: white;
+}
+
+.home-text {
+    padding: 30px;
+    margin-top: 30px;
+}
+
+.travel {
+    font-size: 34px;
+}
+
+.travel-subtext {
+    font-size: 20px;
+}
+
+.img-container {
+    display: grid;
+    grid-template-columns: 33% 33% 33%;
+    /* grid-gap: 5px; */
+    margin-top: 100px;
+}
+
+.img-cards {
+    text-align: center;
+}
+
+.img {
+    width: 300px;
+}
+
+.img-text {
+    margin: 10px 0;
+}
