--- a/frontend/src/containers/styles/SignupStyle.css
+++ b/frontend/src/containers/styles/SignupStyle.css
@@ -1,47 +1,3 @@
-/* .login-container {
-    position: relative;
-    left: 50%;
-    transform: translateX(-50%);
-    top: 100px;
-}
-
-.login-form {
-    text-align: center;
-}
-
-.input-field {
-    padding: 5px 70px;
-    border: 1px solid rgb(202, 202, 202);
-    border-radius: 2rem;
-    margin: 5px 0px 40px 0px;
-    
-}
-
-.login-btn {
-    border: 1px solid transparent;
-    border-radius: 1rem;
-    padding: 5px 30px;
-    font-size: 18px;
-}
-
-.not-reg {
-    text-align: center;
-    margin-top: 20px;
-}
-
-.signup-link {
-    display: flex;
-    justify-content: center;
-    margin-top: -15px;
-    color: black;
-}
-
-.signup-link:hover {
-    text-decoration: none;
-    color: black;
-    font-weight: bolder;
-} */
-
 form {
     display: flex;
     flex-direction: column;
@@ -50,7 +6,7 @@ form {
     align-content: flex-start;
 }
 
-.login-container {
+.signup-container {
     display: flex;
     flex-direction: column;
     width: 40%;
